# citadels

./: .gitignore
backend/: main.py  pyproject.toml
backend/api/: router.py
backend/api/endpoints/user/: __init__.py  register.py
backend/core/: config.py  jwt.py  security.py
backend/database/: connector.py
backend/database/migrations/: env.py
backend/logger/: config.py
